// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TutoringHistoryCard — DOM snapshots test_should_match_snapshot_for_past_completed_session_with_calendar_link 1`] = `
<DocumentFragment>
  <div
    class="tutoring-history-card"
  >
    <div
      class="card-header"
    >
      <div
        class="tutor-info"
      >
        <div
          class="tutor-avatar"
        >
          <svg
            class="lucide lucide-user"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
        <div
          class="tutor-details"
        >
          <h3
            class="tutor-name"
          >
            Carlos Tutor
          </h3>
          <p
            class="tutor-email"
          >
            carlos@test.co
          </p>
        </div>
      </div>
      <div
        class="payment-status"
        style="background-color: rgb(230, 249, 237); color: rgb(15, 81, 50); border: 1px solid rgb(188, 229, 208);"
      >
        <svg
          class="lucide lucide-credit-card"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            width="20"
            x="2"
            y="5"
          />
          <line
            x1="2"
            x2="22"
            y1="10"
            y2="10"
          />
        </svg>
        Pagado
      </div>
    </div>
    <div
      class="card-content"
    >
      <div
        class="session-details"
      >
        <div
          class="detail-item"
        >
          <div
            class="course-badge"
          >
            Cálculo I
          </div>
        </div>
        <div
          class="detail-item"
        >
          <svg
            class="lucide lucide-calendar"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          <span
            class="detail-text"
          >
            15 de abril de 2026, 10:00 a. m.
          </span>
        </div>
        <div
          class="detail-item"
        >
          <svg
            class="lucide lucide-dollar-sign"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
          <span
            class="detail-text price-text"
          >
            $50.000
          </span>
        </div>
      </div>
    </div>
    <div
      class="card-footer"
    >
      <div
        class="session-status"
      >
        <span
          class="status-indicator Completed"
        >
          Completada
        </span>
      </div>
      <div
        class="action-buttons"
      >
        <button
          class="view-details-btn"
          title="Ver detalles completos del evento"
        >
          <svg
            class="lucide lucide-external-link"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
          Ver Detalles
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TutoringHistoryCard — DOM snapshots test_should_match_snapshot_for_past_session_in_ratable_state 1`] = `
<DocumentFragment>
  <div
    class="tutoring-history-card"
  >
    <div
      class="card-header"
    >
      <div
        class="tutor-info"
      >
        <div
          class="tutor-avatar"
        >
          <svg
            class="lucide lucide-user"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
        <div
          class="tutor-details"
        >
          <h3
            class="tutor-name"
          >
            Carlos Tutor
          </h3>
          <p
            class="tutor-email"
          >
            carlos@test.co
          </p>
        </div>
      </div>
      <div
        class="payment-status"
        style="background-color: rgb(230, 249, 237); color: rgb(15, 81, 50); border: 1px solid rgb(188, 229, 208);"
      >
        <svg
          class="lucide lucide-credit-card"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            width="20"
            x="2"
            y="5"
          />
          <line
            x1="2"
            x2="22"
            y1="10"
            y2="10"
          />
        </svg>
        Pagado
      </div>
    </div>
    <div
      class="card-content"
    >
      <div
        class="session-details"
      >
        <div
          class="detail-item"
        >
          <div
            class="course-badge"
          >
            Cálculo I
          </div>
        </div>
        <div
          class="detail-item"
        >
          <svg
            class="lucide lucide-calendar"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          <span
            class="detail-text"
          >
            15 de abril de 2026, 10:00 a. m.
          </span>
        </div>
        <div
          class="detail-item"
        >
          <svg
            class="lucide lucide-dollar-sign"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
          <span
            class="detail-text price-text"
          >
            $50.000
          </span>
        </div>
      </div>
    </div>
    <div
      class="card-footer"
    >
      <div
        class="session-status"
      >
        <span
          class="status-indicator Completed"
        >
          Completada
        </span>
      </div>
      <div
        class="action-buttons"
      >
        <button
          class="rate-btn"
          title="Calificar al tutor"
        >
          <svg
            class="lucide lucide-star"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          Calificar
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TutoringHistoryCard — DOM snapshots test_should_match_snapshot_for_upcoming_session 1`] = `
<DocumentFragment>
  <div
    class="tutoring-history-card"
  >
    <div
      class="card-header"
    >
      <div
        class="tutor-info"
      >
        <div
          class="tutor-avatar"
        >
          <svg
            class="lucide lucide-user"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
        <div
          class="tutor-details"
        >
          <h3
            class="tutor-name"
          >
            Carlos Tutor
          </h3>
          <p
            class="tutor-email"
          >
            carlos@test.co
          </p>
        </div>
      </div>
      <div
        class="payment-status"
        style="background-color: rgb(255, 244, 224); color: rgb(122, 75, 0); border: 1px solid rgb(255, 214, 153);"
      >
        <svg
          class="lucide lucide-credit-card"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            width="20"
            x="2"
            y="5"
          />
          <line
            x1="2"
            x2="22"
            y1="10"
            y2="10"
          />
        </svg>
        Pendiente
      </div>
    </div>
    <div
      class="card-content"
    >
      <div
        class="session-details"
      >
        <div
          class="detail-item"
        >
          <div
            class="course-badge"
          >
            Cálculo I
          </div>
        </div>
        <div
          class="detail-item"
        >
          <svg
            class="lucide lucide-calendar"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          <span
            class="detail-text"
          >
            15 de abril de 2026, 10:00 a. m.
          </span>
        </div>
        <div
          class="detail-item"
        >
          <svg
            class="lucide lucide-dollar-sign"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
          <span
            class="detail-text price-text"
          >
            $50.000
          </span>
        </div>
      </div>
    </div>
    <div
      class="card-footer"
    >
      <div
        class="session-status"
      >
        <span
          class="status-indicator Accepted"
        >
          Pendiente
        </span>
      </div>
      <div
        class="action-buttons"
      />
    </div>
  </div>
</DocumentFragment>
`;
